<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meterstand App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_handmatig">Handmatig</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_preferences">Instellingen</string>
    <string name="recognition_done_message">Het resultaat van OCR</string>
    <string name="go_to_control">Verder</string>
    <string name="taken_photo">Neem een foto van uw meterstand</string>
    <string name="ocr_description">Optical character recognition (OCR), of in het Nederlands: optische tekenherkenning is een transformatie waarbij uit een afbeelding van een tekst door middel van patroonherkenning alle tekens uit de afbeelding als zodanig worden herkend en apart opgeslagen door een computer(programma). Oftewel, de tekst uit een afbeelding wordt omgezet in bewerkbare tekst. Een voorbeeld hiervan is Automatische kentekenplaatherkenning.</string>
    
    <string name="preferences_name">Naam</string>
    <string name="preferences_address">Adres</string>
    <string name="preferences_postcode">Postcode</string>
    <string name="preferences_house_number">Huisnummer</string>
    <string name="preferences_energy_company">Energiemaatschappij</string>
    
    <string name="preferences_key_name">name</string>
    <string name="preferences_key_address">address</string>
    <string name="preferences_key_postcode">postcode</string>
    <string name="preferences_key_house_number">houseNumber</string>
    <string name="preferences_key_energy_company">energyCompany</string>
    
    <string name="meter_value">Stand</string>
    <string name="submit_form">Verzenden</string>
    
    <string name="company_name">Six Engineering</string>
    <string name="client_name">I.D.E. Software</string>
    <string name="company_address">Campus 2 – 6, 8017 CA Zwolle</string>
    <string name="company_logo_description">Bedrijfslogo</string>
    <string name="title_activity_mijnoverzicht">Mijn overzicht</string>
   
    

</resources>